styles/_general.scss
.container.main-content {
    margin-bottom: 3rem;
}

.main-content>.row {
  z-index: 0; /* To allow low-z-index planet-included rows to be selectable in inspector */
}

:root {
  --max-width-main-content: 300px;
  --padding-horizontal-container: 0px;
  --padding-horizontal-row: 0%;
  --padding-horizontal-container-and-row: calc(var(--padding-horizontal-row) + var(--padding-horizontal-container));
}

@media only screen and (max-width: 321px){
  :root {
    --max-width-main-content: 300px;
    }
}

@media only screen and (max-width: 690px){
  :root {
    --max-width-main-content: 320px;
    }
}

@media only screen and (min-width: 480px) and  (max-width: 690px){
  :root {
    --max-width-main-content: 420px;
    }
}

@media only screen and (min-width: 690px) and  (max-width: 999px){
  :root {
    --max-width-main-content: 600px;
    }
}

@media only screen and (min-width: 1000px) {
  :root {
    --max-width-main-content: 1440px;
    --padding-horizontal-container: 90px;
    --padding-horizontal-row: 0%;
    /* --padding-horizontal-container-and-row: calc(var(--padding-horizontal-row) + var(--padding-horizontal-container)); */
    }
}

.search-filter-results-heading {
  margin-bottom: 0;
}

li.gfield {
  max-width: none;
}

